backend/log.txt
    Checking backend v0.1.0 (C:\Users\Rares\Documents\GitHub\HEC\backend)
error[E0422]: cannot find struct, variant or union type `ListParticipantsRequest` in module `livekit_api::services::room`
   --> src\main.rs:441:48
    |
441 |         let req = livekit_api::services::room::ListParticipantsRequest {
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^ not found in `livekit_api::services::room`

warning: unused import: `std::env`
 --> src\livekit_auth.rs:4:5
  |
4 | use std::env;
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\livekit_auth.rs:30:9
   |
30 |     let mut token = AccessToken::with_api_key(&state.livekit_api_key, &state.livekit_api_secret)
   |         ----^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0422`.
warning: `backend` (bin "backend") generated 2 warnings
error: could not compile `backend` (bin "backend") due to 1 previous error; 2 warnings emitted
